--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Tools to help manage Redis",
   "main": "delete.js",
   "dependencies": {
+    "@adexchange/aeg-redis": "0.0.3",
     "async": "^2.0.0-rc.4",
     "lodash": "^4.12.0",
-    "redis": "^2.6.0-2",
     "yargs": "^4.7.0"
   },
   "devDependencies": {},
